--- a/assets/css/bootstrap-global.css
+++ b/assets/css/bootstrap-global.css
@@ -23,3 +23,8 @@ footer
     display: inline-block;
     margin: 0 0 15px 10px;
 }
+
+.control-group-buttons > .form-group:first-of-type
+{
+    float: left;
+}
