--- a/assets/css/bootstrap-global.css
+++ b/assets/css/bootstrap-global.css
@@ -27,4 +27,9 @@ footer
 .modal-footer .control-group-buttons > .form-group:first-of-type
 {
     float: left;
-} 
+}
+
+.tooltip-inner
+{
+    background-color: rgba(0, 0, 0, 0.85);
+}
